force-app/main/default/objects/Object_Mapping_Template__c/Object_Mapping_Template__c.object-meta.xml
<CustomObject>
    <label>Object Mapping Template</label>
    <nameField>
        <label>Object Mapping Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object Mapping Templates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>