force-app/main/default/objects/Object_Mapping_Template__c/fields/Convert_To_SObject_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Convert_To_SObject_Api_Name__c</fullName>
    <label>Convert To SObject Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>