force-app/main/default/objects/Object_Mapping_Template__c/fields/Mapping_Data__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Data__c</fullName>
    <label>Mapping Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>