force-app/main/default/objects/Object_Mapping_Template__c/fields/Source_Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Object_Api_Name__c</fullName>
    <label>Source Object Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>